--- a/src/main/resources/Datasource.properties
+++ b/src/main/resources/Datasource.properties
@@ -1,6 +1,6 @@
 dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-user=postgres
-password=none
-databaseName=CodeForDC_Homeless
-portNumber=5432
-serverName=localhost
+dataSource.user=postgres
+dataSource.password=test
+dataSource.databaseName=CodeForDC_Homeless
+dataSource.portNumber=5432
+dataSource.serverName=localhost
