--- a/src/main/resources/Datasource.properties
+++ b/src/main/resources/Datasource.properties
@@ -4,4 +4,4 @@ dataSource.password=test
 dataSource.databaseName=CodeForDC_Homeless
 dataSource.portNumber=5432
 dataSource.serverName=localhost
-#dataSourceToUse=hikari
+dataSourceToUse=hikari
